log
Tue 14 May 2024 06:02:37 PM UTC: 
 tests:  0|5
total_score: 0/70
4d17368
Tue 14 May 2024 06:10:47 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|5
total_score: 0/70
180585e
Tue 14 May 2024 06:11:22 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
316eb76
Tue 14 May 2024 06:11:43 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ac65c39
Tue 14 May 2024 06:11:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fabdc54
Fri 17 May 2024 09:38:33 PM UTC: 
 sudoku.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
aee4e68
Fri 17 May 2024 09:42:27 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:22: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   69 |       nuevoNodo->sudo[i][j] = k;
      |       ~~~~~~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
eebfe00
Fri 17 May 2024 09:43:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:22: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   69 |       nuevoNodo->sudo[i][j] = k+1;
      |       ~~~~~~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
488e552
